2003-12-31  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-dst.h (DL_DST_REQUIRED): Avoid the complex operations if
	CNT == 0.

2003-12-30  Jakub Jelinek  <jakub@redhat.com>

	* posix/regexec.c (get_subexp): Only set bkref_str after the first
	loop, use buf + bkref_str_off in the loop instead.
	* posix/bug-regex11.c (tests): Add 3 new tests.

	* posix/regexec.c (clean_state_log_if_need): Rename to...
	(clean_state_log_if_needed): ...this.
	(transit_state_mb, get_subexp_sub): Adjust callers.

	* sunrpc/pmap_clnt.c (pmap_set): Do CLNT_DESTROY even if CLNT_CALL
	failed.  Reported by Steve Grubb.

2003-12-29  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h: Add a few definitions from Solaris 9.

2003-12-29  Andreas Schwab  <schwab@suse.de>

	* stdio-common/Makefile (CFLAGS-errlist.c, CFLAGS-siglist.c): Add
	$(fno_unit_at_a_time) to avoid reordering assembler output.

2003-12-29  Jakub Jelinek  <jakub@redhat.com>

	* posix/regexec.c (re_copy_regs): Revert comment change.
	Avoid memory leak if realloc fails.
	(proceed_next_node): Return -2 if re_node_set_insert fails.
	Return -2 if push_fail_stack fails.
	(push_fail_stack): Change fs->alloc only after successful realloc.
	(pop_fail_stack): Formatting.
	(set_regs): If proceed_next_node returns -2, free eps_via_nodes and fs.
	(check_arrival_add_next_nodes): Merge identical statements
	from if branches.

	* signal/Makefile (tests): Add tst-raise.
	* signal/tst-raise.c: New test.

2003-12-28  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c (mark_opt_subexp_iter): Declare IDX as int.

	* posix/regexec.c (re_copy_regs): Fix testing for failed allocation.
	(push_fail_stack): Add missing check for failed memory allocation.

	* libio/libio.h: Use __builtin_expect in _IO_getc_unlocked,
	_IO_peekc_unlocked, _IO_putc_unlocked, _IO_getwc_unlocked, and
	_IO_putwc_unlocked.

2003-12-28  Andreas Jaeger  <aj@suse.de>

	* sysdeps/ieee754/dbl-64/e_j0.c (__ieee754_y0): Raise only